# Coursera_Yellow_Belt

./: CMakeLists.txt  README.md
.github/workflows/: cmake_dev.yml
HomeWorks/: CMakeLists.txt
HomeWorks/Week_1/: CMakeLists.txt
HomeWorks/Week_1/hw_RegionsBase/: CMakeLists.txt
HomeWorks/Week_1/hw_RegionsBase/docs/: Readme.md
HomeWorks/Week_1/hw_RegionsBase/include/shared/: Region.hpp  RegionsBase.hpp
HomeWorks/Week_1/hw_RegionsBase/src/: Region.cpp  RegionsBase.cpp  main.cpp
HomeWorks/Week_1/hw_RegionsBase/tests/: CMakeLists.txt  base_test.cpp
HomeWorks/Week_1/hw_TaskTracker/: CMakeLists.txt
HomeWorks/Week_1/hw_TaskTracker/docs/: Readme.md
HomeWorks/Week_1/hw_TaskTracker/include/shared/: Team_Tasks.hpp
HomeWorks/Week_1/hw_TaskTracker/src/: Team_Tasks.cpp  answer.cpp  main.cpp
HomeWorks/Week_1/hw_TaskTracker/tests/: CMakeLists.txt  tracker_test.cpp
HomeWorks/Week_1/hw_busstop/: CMakeLists.txt
HomeWorks/Week_1/hw_busstop/src/: main.cpp  template.cpp
HomeWorks/Week_1/hw_refElement/docs/: Readme.md
HomeWorks/Week_1/hw_refElement/src/: main.cpp
HomeWorks/Week_1/hw_rootAll/: CMakeLists.txt
HomeWorks/Week_1/hw_rootAll/docs/: Readme.md
HomeWorks/Week_1/hw_rootAll/src/: main.cpp
HomeWorks/Week_2/: CMakeLists.txt
HomeWorks/Week_2/hw_Person/: CMakeLists.txt
HomeWorks/Week_2/hw_Person/src/: main.cpp
HomeWorks/Week_2/hw_busstop/docs/: Readme.md
HomeWorks/Week_2/hw_busstop/src/: correct.cpp  main.cpp
HomeWorks/Week_2/hw_test_is_palindrome/: CMakeLists.txt
HomeWorks/Week_2/hw_test_is_palindrome/src/: main.cpp
HomeWorks/Week_2/hw_test_rational/: CMakeLists.txt
HomeWorks/Week_2/hw_test_rational/src/: main.cpp
HomeWorks/Week_2/hw_test_rootEquation/: CMakeLists.txt
HomeWorks/Week_2/hw_test_rootEquation/include/: UnitTests.cpp
HomeWorks/Week_2/hw_test_rootEquation/src/: main.cpp
HomeWorks/Week_3/: CMakeLists.txt
HomeWorks/Week_3/hw_1/: CMakeLists.txt
HomeWorks/Week_3/hw_1/src/: sum_reverse_sort.h  sum_revert_sort.cpp
HomeWorks/Week_3/hw_decompose2/: CMakeLists.txt
HomeWorks/Week_3/hw_decompose2/src/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
HomeWorks/Week_3/hw_phone_number/: CMakeLists.txt
HomeWorks/Week_3/hw_phone_number/src/: phone_number.cpp  phone_number.h
HomeWorks/Week_3/hw_rectangle/: CMakeLists.txt
HomeWorks/Week_3/hw_rectangle/src/: rectangle.cpp  rectangle.h
HomeWorks/Week_4/: CMakeLists.txt
HomeWorks/Week_4/delete_repeating/: CMakeLists.txt
HomeWorks/Week_4/delete_repeating/src/: main.cpp
HomeWorks/Week_4/hw_DemographicStat/: CMakeLists.txt
HomeWorks/Week_4/hw_DemographicStat/src/: main.cpp
HomeWorks/Week_4/hw_PersonalFinance/: CMakeLists.txt
HomeWorks/Week_4/hw_PersonalFinance/doc/: readme.md
HomeWorks/Week_4/hw_PersonalFinance/src/: main.cpp
HomeWorks/Week_4/hw_expression/: CMakeLists.txt
HomeWorks/Week_4/hw_expression/src/: main.cpp  main2.cpp
HomeWorks/Week_4/hw_find_nearest/: CMakeLists.txt
HomeWorks/Week_4/hw_find_nearest/src/: main.cpp
HomeWorks/Week_4/hw_merge_sort/: CMakeLists.txt
HomeWorks/Week_4/hw_merge_sort/src/: main.cpp  msort3.cpp
HomeWorks/Week_4/hw_permutations/: CMakeLists.txt
HomeWorks/Week_4/hw_permutations/src/: main.cpp
HomeWorks/Week_4/hw_person_II/: CMakeLists.txt
HomeWorks/Week_4/hw_person_II/src/: main.cpp
HomeWorks/Week_4/hw_prefix/: CMakeLists.txt
HomeWorks/Week_4/hw_prefix/src/: main.cpp  main2.cpp
HomeWorks/Week_4/hw_print_vector/: CMakeLists.txt
HomeWorks/Week_4/hw_print_vector/src/: main.cpp
HomeWorks/Week_4/hw_sets/: CMakeLists.txt
HomeWorks/Week_4/hw_sets/src/: main.cpp
HomeWorks/Week_4/hw_split_into_words/: CMakeLists.txt
HomeWorks/Week_4/hw_split_into_words/src/: main.cpp
HomeWorks/Week_5/: CMakeLists.txt
HomeWorks/Week_5/hw_figures/: CMakeLists.txt
HomeWorks/Week_5/hw_figures/src/: main.cpp
HomeWorks/Week_5/hw_inheritance/: CMakeLists.txt
HomeWorks/Week_5/hw_inheritance/src/: main.cpp
HomeWorks/Week_5/hw_refactoring/: CMakeLists.txt
HomeWorks/Week_5/hw_refactoring/src/: main.cpp
HomeWorks/Week_5/hw_sendMessage/: CMakeLists.txt
HomeWorks/Week_5/hw_sendMessage/src/: main.cpp  test_run.cpp
HomeWorks/Week_6/FinalProject/: CMakeLists.txt
HomeWorks/Week_6/FinalProject/src/: Helper.cpp  Helper.h  database.cpp  database.h  date.cpp  date.h  node.cpp  node.h  original.cpp  test_runner.cpp  test_runner.h
docs/: UnitTests.cpp
